// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WaitRouterForm shoud save a normal wait 1`] = `
Array [
  Object {
    "inboundConnections": Object {},
    "node": Object {
      "actions": Array [],
      "exits": Array [
        Object {
          "uuid": "6c22884b-0e35-4206-982e-18320691eda9",
        },
      ],
      "router": Object {
        "cases": Array [],
        "categories": Array [
          Object {
            "exit_uuid": "6c22884b-0e35-4206-982e-18320691eda9",
            "name": "All Responses",
            "uuid": "a62e8284-49f8-4292-adbc-d5f6607f85c5",
          },
        ],
        "default_category_uuid": "a62e8284-49f8-4292-adbc-d5f6607f85c5",
        "operand": "@input.text",
        "type": "switch",
        "wait": Object {
          "type": "msg",
        },
      },
      "uuid": "0c8c9239-9b59-473a-a229-d8a9693be270",
    },
    "ui": Object {
      "config": Object {
        "cases": Object {},
      },
      "position": null,
      "type": "wait_for_response",
    },
  },
]
`;

exports[`WaitRouterForm should render a normal wait 1`] = `
<body>
  <div>
    <div
      class="dialog"
    >
      <div
        class="header wait_for_response"
      >
        <div
          class="title_container"
        >
          <div
            class="title"
          >
            Wait for Response
          </div>
          <div
            class="subtitle"
          />
        </div>
      </div>
      <div
        class="content"
      >
        <div
          class=" type_list"
        >
          <p>
            When a contact arrives at this point in your flow...
          </p>
          <div>
            <div
              class="normal "
            >
              <temba-select
                data-testid="temba_select_type"
                searchable="true"
              >
                <temba-option
                  name="Send the contact a message"
                  value="send_msg"
                />
                <temba-option
                  name="Wait for the contact to respond"
                  selected="true"
                  value="wait_for_response"
                />
                <temba-option
                  name="Send somebody else a message"
                  value="send_broadcast"
                />
                <temba-option
                  name="Label the incoming message"
                  value="add_input_labels"
                />
                <temba-option
                  name="Add a URN for the contact"
                  value="add_contact_urn"
                />
                <temba-option
                  name="Add the contact to a group"
                  value="add_contact_groups"
                />
                <temba-option
                  name="Remove the contact from a group"
                  value="remove_contact_groups"
                />
                <temba-option
                  name="Update the contact"
                  value="set_contact_field"
                />
                <temba-option
                  name="Send an email"
                  value="send_email"
                />
                <temba-option
                  name="Save a result for this flow"
                  value="set_run_result"
                />
                <temba-option
                  name="Call a webhook"
                  value="call_webhook"
                />
                <temba-option
                  name="Call Zapier"
                  value="call_resthook"
                />
                <temba-option
                  name="Enter another flow"
                  value="enter_flow"
                />
                <temba-option
                  name="Start somebody else in a flow"
                  value="start_session"
                />
                <temba-option
                  name="Send the contact airtime"
                  value="transfer_airtime"
                />
                <temba-option
                  name="Split by intent"
                  value="split_by_intent"
                />
                <temba-option
                  name="Split by a custom expression"
                  value="split_by_expression"
                />
                <temba-option
                  name="Split by a contact field"
                  value="split_by_contact_field"
                />
                <temba-option
                  name="Split by a result in the flow"
                  value="split_by_run_result"
                />
                <temba-option
                  name="Split by random chance"
                  value="split_by_random"
                />
                <temba-option
                  name="Split by group membership"
                  value="split_by_groups"
                />
                <temba-option
                  name="Split by URN type"
                  value="split_by_scheme"
                />
              </temba-select>
            </div>
          </div>
        </div>
        <div
          class="result_name"
        >
          <div
            class="optional_text_input"
          >
            <span
              class="toggle_link"
              data-spec="toggle-link"
            >
              Save as..
            </span>
          </div>
        </div>
      </div>
      <div
        class="footer"
      >
        <div
          class="buttons"
        >
          <div
            class="right_buttons"
          >
            <div
              class="btn secondary  "
              style="margin-left: 0px; margin-top: 0px;"
            >
              Cancel
            </div>
            <div
              class="btn primary  "
              style="margin-left: 10px; margin-top: 0px;"
            >
              Ok
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`WaitRouterForm should render wait for audio with previous name 1`] = `
<body>
  <div>
    <div
      class="dialog"
    >
      <div
        class="header wait_for_audio"
      >
        <div
          class="title_container"
        >
          <div
            class="title"
          >
            Wait for Audio
          </div>
          <div
            class="subtitle"
          />
        </div>
      </div>
      <div
        class="content"
      >
        <div
          class=" type_list"
        >
          <p>
            When a contact arrives at this point in your flow...
          </p>
          <div>
            <div
              class="normal "
            >
              <temba-select
                data-testid="temba_select_type"
                searchable="true"
              >
                <temba-option
                  name="Send the contact a message"
                  value="send_msg"
                />
                <temba-option
                  name="Wait for the contact to respond"
                  value="wait_for_response"
                />
                <temba-option
                  name="Send somebody else a message"
                  value="send_broadcast"
                />
                <temba-option
                  name="Label the incoming message"
                  value="add_input_labels"
                />
                <temba-option
                  name="Add a URN for the contact"
                  value="add_contact_urn"
                />
                <temba-option
                  name="Add the contact to a group"
                  value="add_contact_groups"
                />
                <temba-option
                  name="Remove the contact from a group"
                  value="remove_contact_groups"
                />
                <temba-option
                  name="Update the contact"
                  value="set_contact_field"
                />
                <temba-option
                  name="Send an email"
                  value="send_email"
                />
                <temba-option
                  name="Save a result for this flow"
                  value="set_run_result"
                />
                <temba-option
                  name="Call a webhook"
                  value="call_webhook"
                />
                <temba-option
                  name="Call Zapier"
                  value="call_resthook"
                />
                <temba-option
                  name="Enter another flow"
                  value="enter_flow"
                />
                <temba-option
                  name="Start somebody else in a flow"
                  value="start_session"
                />
                <temba-option
                  name="Send the contact airtime"
                  value="transfer_airtime"
                />
                <temba-option
                  name="Split by intent"
                  value="split_by_intent"
                />
                <temba-option
                  name="Split by a custom expression"
                  value="split_by_expression"
                />
                <temba-option
                  name="Split by a contact field"
                  value="split_by_contact_field"
                />
                <temba-option
                  name="Split by a result in the flow"
                  value="split_by_run_result"
                />
                <temba-option
                  name="Split by random chance"
                  value="split_by_random"
                />
                <temba-option
                  name="Split by group membership"
                  value="split_by_groups"
                />
                <temba-option
                  name="Split by URN type"
                  value="split_by_scheme"
                />
              </temba-select>
            </div>
          </div>
        </div>
        <div
          class="result_name"
        >
          <div
            class="optional_text_input"
          >
            <div
              class="ele"
            >
              <div
                class="label"
              >
                Result Name
              </div>
              <div
                class="wrapper"
              >
                <input
                  class="textinput"
                  data-spec="input"
                  data-testid="input"
                  maxlength="64"
                  name="Result Name"
                  type="text"
                  value="Previous Name"
                />
                <div
                  class="completion_container hidden"
                  data-spec="completion-options"
                  style="top: 0px; left: 0px;"
                >
                  <div
                    class="options_wrapper"
                  >
                    <ul
                      class="option_list"
                      data-spec="completion-list"
                    />
                    <div
                      class="help"
                      data-spec="completion-help"
                    >
                      Tab to complete, enter to select
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="help_text"
              >
                By naming the result, you can reference it later using @results.previous_name
                 
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="footer"
      >
        <div
          class="buttons"
        >
          <div
            class="right_buttons"
          >
            <div
              class="btn secondary  "
              style="margin-left: 0px; margin-top: 0px;"
            >
              Cancel
            </div>
            <div
              class="btn primary  "
              style="margin-left: 10px; margin-top: 0px;"
            >
              Ok
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`WaitRouterForm should use the right operand for media types 1`] = `
Array [
  Object {
    "inboundConnections": Object {},
    "node": Object {
      "actions": Array [],
      "exits": Array [
        Object {
          "uuid": "9adce29f-da95-4182-9cb3-0f1e3bf714e5",
        },
      ],
      "router": Object {
        "cases": Array [],
        "categories": Array [
          Object {
            "exit_uuid": "9adce29f-da95-4182-9cb3-0f1e3bf714e5",
            "name": "All Responses",
            "uuid": "6b59e863-2e14-442b-9987-aaa284871b8e",
          },
        ],
        "default_category_uuid": "6b59e863-2e14-442b-9987-aaa284871b8e",
        "operand": "@input",
        "result_name": "Previous Name",
        "type": "switch",
        "wait": Object {
          "hint": Object {
            "type": "audio",
          },
          "type": "msg",
        },
      },
      "uuid": "00dd2423-0a34-4ee2-b97d-839fb2d593ef",
    },
    "ui": Object {
      "config": Object {
        "cases": Object {},
      },
      "position": null,
      "type": "wait_for_response",
    },
  },
]
`;
